--- a/index.html
+++ b/index.html
@@ -953,7 +953,7 @@
             <div class="hero-card">
                 <div class="profile-showcase">
                     <!-- Photo Profile (Initiales) -->
-                    <div class="profile-photo">SA</div>
+                    <img src="sabrine.jpg" alt="Sabrine Abassi" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;">
                     
                     <div class="current-role">
                         <h3>Poste Actuel</h3>
