--- a/index.html
+++ b/index.html
@@ -980,7 +980,7 @@
                     <a href="#contact" class="btn btn-primary">
                         <span>📧 Me Contacter</span>
                     </a>
-                    <a href="#" onclick="downloadCV(event)" class="btn btn-secondary">
+                    <a href="CV Sabrine Abassi.pdf" onclick="downloadCV(event)" class="btn btn-secondary">
                         <span>📄 Télécharger CV</span>
                     </a>
                 </div>
