--- a/index.html
+++ b/index.html
@@ -975,15 +975,14 @@
                     <span class="expertise-tag">Signal Processing</span>
                     <span class="expertise-tag">Research & Innovation</span>
                 </div>
-
-                <div class="cta-buttons">
-                    <a href="#contact" class="btn btn-primary">
-                        <span>📧 Me Contacter</span>
-                    </a>
-                    <a href="https://AbassiSabrine.github.io/CV_Sabrine_Abassi.pdf" onclick="downloadCV(event)" class="btn btn-secondary">
-                        <span>📄 Télécharger CV</span>
-                    </a>
-                </div>
+                    <div class="cta-buttons">
+                        <a href="#contact" class="btn btn-primary">
+                            <span>📧 Me Contacter</span>
+                        </a>
+                        <a href="CV_Sabrine_Abassi.pdf" download class="btn btn-secondary">
+                            <span>📄 Télécharger CV</span>
+                        </a>
+                    </div>
 
                 <div class="stats-bar">
                     <div class="stat-item">
