--- a/index.html
+++ b/index.html
@@ -1040,9 +1040,13 @@
                     <a href="#contact" class="btn btn-primary">
                         <span data-i18n="btn-contact">📧 Me Contacter</span>
                     </a>
-                    <a href="#" id="downloadCvBtn" class="btn btn-secondary">
+                    <a href="cv/Sabrine_Abassi_CV.pdf"
+                       class="btn btn-secondary"
+                       download="Sabrine_Abassi_CV.pdf"
+                       target="_blank">
                         <span data-i18n="btn-cv">📄 Télécharger CV</span>
                     </a>
+
                 </div>
 
                 <div class="stats-bar">
