--- a/index.html
+++ b/index.html
@@ -1554,8 +1554,8 @@
 
         // CV Files mapping
         const cvFiles = {
-            fr: './cv/CV_Sabrine_Abassi_FR.pdf',
-            en: './cv/CV_Sabrine_Abassi_EN.pdf'
+            fr: 'CV Sabrine Abassi Fr.pdf',
+            en: 'CV Sabrine Abassi En.pdf'
         };
 
         // Current language
