--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
         }
 
         /* Language Switcher - Repositionné */
-     .language-switcher {
+   .language-switcher {
     position: fixed;
     top: 90px;
-    right: 30px;
+    right: 30px;  /* ← Change cette valeur */
     z-index: 999;
     display: flex;
     gap: 0;
