--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 
         /* Language Switcher - Repositionné */
 .language-switcher {
-    position: fixed;
-    bottom: 30px;  /* Changé de top à bottom */
-    right: 150px;  /* Augmenté pour plus à droite */
+    position: absolute;  /* Changé de fixed à absolute */
+    top: 20px;
+    right: 20px;
     z-index: 999;
     display: flex;
     gap: 0;
