--- a/index.html
+++ b/index.html
@@ -43,16 +43,16 @@
         }
 
         /* Language Switcher - Repositionné */
- .language-switcher {
+.language-switcher {
     position: fixed;
     top: 90px;
-    right: 120px;  /* Augmenté pour décaler plus à droite */
+    right: 150px;  /* Changé de 120px à 150px */
     z-index: 999;
     display: flex;
     gap: 0;
     background: #E8EDF5;
-    padding: 4px;  /* Réduit de 6px à 4px */
-    border-radius: 40px;  /* Réduit pour correspondre à la nouvelle taille */
+    padding: 4px;
+    border-radius: 40px;
     box-shadow: 0 4px 20px rgba(0,0,0,0.08);
 }
 
